buttons visibility fix

--- a/app/assets/stylesheets/rails_admin/rails_admin_user_abilities.sass
+++ b/app/assets/stylesheets/rails_admin/rails_admin_user_abilities.sass
@@ -15,3 +15,5 @@
 
   .json_block
     margin-bottom: 50px
+    .toggle_json_block.collapsed ~ .update_json_block
+      display: none
